--- a/gov-app/src/pages/Style.css
+++ b/gov-app/src/pages/Style.css
@@ -1,11 +1,16 @@
+.main-container h2{
+    text-align: center;
+    text-transform: uppercase;
+}
 .main-container form {
     display: flex;
     flex-direction: column;
     width: 20%;
     gap: 20px;
+    margin: auto;
 }
 
-.main-container form label, .main-container form button {
+.main-container form input, .main-container form button {
     height: 40px;
 }
 
